Added vuejs for docker and laravel synchronized with it.

--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -5,15 +5,18 @@ COPY wait-for-it.sh /usr/bin/wait-for-it
 RUN chmod +x /usr/bin/wait-for-it
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends libssl-dev zlib1g-dev curl git unzip netcat libxml2-dev libpq-dev libzip-dev && \
+    apt-get install -y --no-install-recommends libssl-dev zlib1g-dev curl git unzip netcat libxml2-dev libpq-dev libzip-dev npm && \
     pecl install apcu && \
-    docker-php-ext-install mysqli && docker-php-ext-enable mysqli && \
+    docker-php-ext-install pdo pdo_mysql mysqli && docker-php-ext-enable pdo pdo_mysql mysqli && \
     docker-php-ext-install -j$(nproc) zip opcache intl && \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN docker-php-ext-install pdo pdo_mysql \
-    && docker-php-ext-enable pdo pdo_mysql \
-    && docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd
+RUN docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd
+
+RUN curl -sL https://deb.nodesource.com/setup_18.x | bash
+RUN apt-get install --yes nodejs
+RUN node -v
+RUN npm -v
 
 COPY --from=composer /usr/bin/composer /usr/bin/composer
 
