--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -33,13 +33,13 @@ services:
     depends_on:
       - php-fpm
     ports:
-      - "81:81"
+      - "81:80"
       - "444:444"
     networks:
       default:
-        ipv4_address: 172.10.0.103
+        ipv4_address: 178.62.254.38
 
 networks:
   default:
     external:
-      name: docker_default
+      name: custom_net
